--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -15,6 +15,7 @@
 }
 
   .row-info{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +30,7 @@
 display: flex;
   }
   .column{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,9 +56,52 @@ display: flex;
 outline: none;
     &.selected{
 border:none;
-   outline: 2px solid #3c74ff;
+   outline: 2px solid $primary-color;
       z-index: 2 ;
     }
   }
+
+  .col-resize, .row-resize{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    background: $primary-color;
+
+    right: 0;
+    z-index: 1000;
+    &:hover {
+      opacity: 1;
+    }
+    &:active {
+      opacity: 1;
+    }
+
+
+
+  }
+
+
+
+  .col-resize{
+    top: 0;
+    width: 3px;
+    &:hover{
+      cursor: col-resize;
+
+    }
+
+}
+  .row-resize{
+    left: 0;
+    height: 4px;
+    &:hover{
+      cursor: row-resize;
+    }
+
+  }
+  //.cell-resize{
+  //  border-right: 1px solid #3c74ff;
+  //}
+
 
 }
