finish redux and table logic

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,7 +11,8 @@
     font-size: 18px;
   }
   &:active,&.active {
-    color: $color
+    //color: $color
+    color: red
   }
   &:hover {
     background: #eee;
